--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,21 @@ fastapi
 uvicorn[standard]
 python-multipart
 git+https://github.com/facebookresearch/segment-anything-2.git#egg=sam2
-git+https://github.com/hustvl/MatAnyone.git#egg=matanyone
-torch
-torchvision
+torch>=2.0.0
+torchvision>=0.15.0
 transformers
+pillow
+numpy
+opencv-python
+
+# MatAnyone dependencies
+matanyone>=1.0.0
+omegaconf==2.3.0
+hydra-core==1.3.2
+easydict==0.1.10
+imageio==2.25.0
+huggingface-hub>=0.16.0
+safetensors>=0.3.0
+einops>=0.6.0
+scipy>=1.10.0
+av>=10.0.0
