--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn[standard]
 python-multipart
-git+https://github.com/facebookresearch/segment-anything-2.git#egg=sam-2
+git+https://github.com/facebookresearch/segment-anything-2.git#egg=sam2
 torch>=2.0.0
 torchvision>=0.15.0
 transformers
@@ -9,8 +9,8 @@ pillow
 numpy
 opencv-python
 
-# MatAnyone dependencies
-matanyone>=1.0.0
+# MatAnyone dependencies (installed directly from GitHub)
+git+https://github.com/SHI-Labs/matanyone.git#egg=matanyone
 omegaconf==2.3.0
 hydra-core==1.3.2
 easydict==0.1.10
