--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-fastapi
-uvicorn[standard]
-python-multipart
-git+https://github.com/facebookresearch/segment-anything-2.git#egg=sam2
-torch>=2.0.0
-torchvision>=0.15.0
-transformers
-pillow
-numpy
-opencv-python
-
-# MatAnyone dependencies (installed directly from GitHub)
-git+https://github.com/SHI-Labs/matanyone.git#egg=matanyone
-omegaconf==2.3.0
-hydra-core==1.3.2
-easydict==0.1.10
-imageio==2.25.0
-huggingface-hub>=0.16.0
-safetensors>=0.3.0
-einops>=0.6.0
-scipy>=1.10.0
-av>=10.0.0
+runpod==1.7.0
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
+python-multipart==0.0.9
+transformers==4.43.3
+pillow==10.4.0
+numpy==1.26.4
+opencv-python-headless==4.10.0.84
+requests==2.32.3
+tqdm==4.66.4
