--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,13 @@ numpy==1.26.4
 opencv-python-headless==4.10.0.84
 einops==0.8.0
 
-# HF / weights
+# HF / weights (modelhentning + configs)
 huggingface-hub==0.24.5
 safetensors==0.4.3
 omegaconf==2.3.0
 hydra-core==1.3.2
-easydict==0.1.10
+easydict==1.10
 
-# MatAnyone + SAM2 (pin gerne til commits for stabilitet)
+# MatAnyone + SAM2 (pin gerne til commits, når I har testet en stabil)
 git+https://github.com/pq-yang/MatAnyone.git#egg=matanyone
 git+https://github.com/facebookresearch/segment-anything-2.git#egg=segment-anything-2
