--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-# RunPod + utils
+# --- RunPod + small utils ---
 runpod==1.7.0
 requests==2.32.3
 tqdm==4.66.4
 pillow==10.4.0
 
-# Numerics / CV
+# --- Numerics / CV (compatible with Torch 2.3.x, Py3.10) ---
 numpy==1.26.4
 scipy==1.13.1
 einops==0.8.0
 opencv-python-headless==4.10.0.84
 av==12.1.0
-timm>=0.9.16
+timm==1.0.19
 
-# HF / transformers / weights
+# --- HF / Transformers / weights ---
 transformers==4.43.3
-huggingface-hub==0.24.5
-safetensors==0.4.3
+# Pin to a modern hub that plays nice with transformers 4.43 and timm 1.0.x
+huggingface-hub==0.34.4
+safetensors==0.6.2
+
+# Config / misc
 omegaconf==2.3.0
 hydra-core==1.3.2
 easydict==0.1.10
